Credenciales: template arreglado

--- a/sap/templates/solicitudes/credencialcreada.html
+++ b/sap/templates/solicitudes/credencialcreada.html
@@ -43,6 +43,12 @@
 				<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
 				</div>
 				
+				<div class="jumbotron">
+					<div class="bs-example">
+						<p class="text-warning"><small>{{ mensaje }}</small></p>
+					</div>
+				</div>
+				
 				<div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
 					<table class="table table-hover table-bordered table-condensed table-responsive">
 						<tbody>
@@ -73,24 +79,14 @@
 						  	</tr>
 						  	<tr class="active">
 						  		<td><p><h4>Estado: </h4></p></td>
-						  		<td><p><h4><span class="label label-default">{{ solicitud.estado }}</span></h4></h4></p></td>
+						  		<td><p><h4><span class="label label-default">{{ credencial.estado }}</span></h4></h4></p></td>
 						  	</tr>
-						  	
-						  	<form action="adm_proyectos/credencial/(?P<id_credencial>\d+)/" method="get">
-								<input type="text" name="observaciones" class="form-control" placeholder="Observaciones respecto a credencial" value="Ninguna">
-								<input class="btn btn-default" type="submit" value="Observaciones">
-							</form>
-
 						  	<br>
 						</tbody>	
 					</table>
-					{% ifequal solicitud.estado 'Pendiente' %}
-						<div align="center">
-							<button class="btn btn-danger btn-sm solicitudRealizada" data-toggle="modal" data-target="#myModal" data-id="{{ solicitud.id }}"><span class="glyphicon glyphicon-trash"></span> Cancelar Solicitud</button>
-						</div>
-					{% endifequal %}
+
 					<div align="center">
-						<a href="javascript:window.history.back();"><button type="button" class="btn btn-default"><span class="glyphicon glyphicon-arrow-left"></span> Volver</button></a>
+						<a href="/adm_proyectos/solicitudes_recibidas/"><button type="button" class="btn btn-default"><span class="glyphicon glyphicon-arrow-left"></span> Volver</button></a>
 					</div>
 				</div>
 				
@@ -98,26 +94,6 @@
 				</div>
 		</div>
 	</div>
-	
-		<!-- Ininicia Modal -->
-		<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-		  <div class="modal-dialog">
-		    <div class="modal-content">
-		      <div class="modal-header">
-		        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-		        <h4 class="modal-title" id="myModalLabel">Eliminar</h4>
-		      </div>
-		      <div class="modal-body">
-		        	Esta usted seguro de que desea Cancelar la Solicitud?
-		      </div>
-		      <div class="modal-footer">
-		        <button type="button" class="btn btn-default" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span> Cancelar</button>
-		       <a id="solicitudRealizada" href=""><button type="button" class="btn btn-danger"><span class="glyphicon glyphicon-ok"></span> Estoy Seguro</button></a>
-		      </div>
-		    </div>
-		  </div>
-		</div>
-		<!-- Finaliza el Modal -->
 	
 </div>
 
