--- a/sap/templates/relaciones/relacionnueva.html
+++ b/sap/templates/relaciones/relacionnueva.html
@@ -45,7 +45,7 @@
 							<div class="col-md-4">
 								<div class="panel-heading">
 									<h4 class="panel-title">
-										{{ importar.fase_id.nombre }}
+										{{ importar.fase_id }}
 									</h4>
 								</div>
 							</div>
@@ -72,7 +72,7 @@
 							<div class="col-md-4">
 								<div class="panel-heading">
 									<h4 class="panel-title">
-										{{ importar.fase_id.nombre }}
+										{{ importar.fase_id }}
 									</h4>
 								</div>
 							</div>
