--- a/sap/templates/index.html
+++ b/sap/templates/index.html
@@ -33,7 +33,7 @@
 			<a href="solicitudes_realizadas/">Solicitudes</a>
 		</li>
 		<li id="option3">
-		 	<a href="#">Credenciales</a>
+		 	<a href="admin_credenciales/">Credenciales</a>
 		</li>
 	</ul>
 </div>
