--- a/sap/templates/solicitudes/credenciales.html
+++ b/sap/templates/solicitudes/credenciales.html
@@ -119,7 +119,7 @@
 				    
 				    <div id="collapse{{ credencial.id }}" class="panel-collapse collapse pull-left">
 				      <div class="panel-body">
-				      		<a href="#"><button type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-eye-open"></span> Consultar</button></a>
+				      		<a href="consultar_credencial/{{ credencial.id }}/"><button type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-eye-open"></span> Consultar</button></a>
 				      		{% ifequal credencial.estado 'Habilitado' %}
 				      		<button class="btn btn-danger btn-sm credencial" data-toggle="modal" data-target="#myModal" data-id="{{ credencial.id }}"><span class="glyphicon glyphicon-trash"></span> Cancelar Credencial</button>
 				      		{% endifequal %}
