--- a/sap/templates/relaciones/relacionalerta.html
+++ b/sap/templates/relaciones/relacionalerta.html
@@ -4,7 +4,7 @@
 	<div class="bs-example">
 		<h2>Notificacion</h2>
 			<p class="text-warning"><small>{{ mensaje }}</small></p>
-			<a type="button" class="btn btn-default" href="/adm_proyectos/gestionar/{{ id_proyecto }}/adm_items/{{ id_fase }}/relaciones/{{ id_item }}/">Volver</a>
+			<a type="button" class="btn btn-default" href="/adm_proyectos/gestionar/{{ id_proyecto }}/adm_items/{{ id_fase }}/">Volver</a>
 	</div>
 </div>
 {% endblock %}
