--- a/sap/templates/index.html
+++ b/sap/templates/index.html
@@ -12,7 +12,7 @@
         </ul>
 
 		<ul class="nav navbar-nav navbar-right">
-			<li><a href="#">Acerca de</a></li>
+			<li><a href="/informes/">Informes</a><li><li><a href="#">Acerca de</a></li>
 			<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Registro del Sistema<b class="caret"></b></a>
 				<ul class="dropdown-menu">
 				
