--- a/sap/templates/informes/proyecto_html.html
+++ b/sap/templates/informes/proyecto_html.html
@@ -30,6 +30,7 @@
     	<h1 align="center">Informe de Proyectos</h1>
 
     	<td><p><h2><span class="label label-default">Proyectos en estado Inicializado: {{ cantidad_pi }}</span></h2></h4></p></td>
+    	{% if lista_P_I %}
     	<table class="table table-hover table-bordered table-condensed table-responsive">
 						<tbody>
 						  	<tr class="active">
@@ -57,8 +58,10 @@
 							{% endfor %}
 						</tbody>
 					</table>
+				{% endif %}
 					
 		<td><p><h2><span class="label label-default">Proyectos en estado En Construccion: {{ cantidad_pc }}</span></h2></h4></p></td>
+    	{% if lista_P_C %}
     	<table class="table table-hover table-bordered table-condensed table-responsive">
 						<tbody>
 						  	<tr class="active">
@@ -86,10 +89,11 @@
 							{% endfor %}
 						</tbody>
 					</table>
-					
+				{% endif %}
 					
 		<td><p><h2><span class="label label-default">Proyectos en estado Finalizado: {{ cantidad_pf }}</span></h2></h4></p></td>
-    		<table class="table table-hover table-bordered table-condensed table-responsive">
+    	{% if lista_P_F %}
+    	<table class="table table-hover table-bordered table-condensed table-responsive">
 						<tbody>
 						  	<tr class="active">
 						  		<td><p><h4><b>Nombre del Proyecto</b></h2></p></td>
@@ -116,6 +120,7 @@
 							{% endfor %}
 						</tbody>
 						</table>
+					{% endif %}
 </div>
 <div align="center">
 	<a class="btn btn-default" href="javascript:window.history.go(-1);"><span class="glyphicon glyphicon-arrow-left"></span> Volver</a>
