--- a/sap/templates/informes/informes.html
+++ b/sap/templates/informes/informes.html
@@ -52,7 +52,7 @@
 		</div>
 	</div>
 	
-	<!-- Informe de Fases -->
+	<!-- Informe de Solicitudes -->
 	<div class="row ">
 		<div class="panel-group" id="accordion">
 			<div class="panel panel-default">
@@ -60,7 +60,7 @@
 				<div class="col-md-6">
 				    <div class="panel-heading">
 				      	<h4 class="panel-title">
-				          	Informe de Fases
+				          	Solicitudes - Items
 				      	</h4>
 				    </div>
 				</div>
@@ -68,8 +68,7 @@
 				<div class="col-md-6">
 				    <div class="panel-heading">
 				      	<h4 class="panel-title">
-				          	<a href="#/"><button type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-eye-open"></span> Ver Informe</button></a>
-				      		<a href="#"><button type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-tasks"></span> Generar PDF</button></a>
+				          	<a href="/informes/seleccionar_proyecto/"><button type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-eye-open"></span> Seleccionar</button></a>
 				      	</h4>
 				    </div>
 				</div>
@@ -77,8 +76,6 @@
 			</div>
 		</div>
 	</div>
-	
-	<!-- Informe de Items-->
 	
 </div>
 
